# MDFTests

./: .gitignore  .travis.yml  README.md
NeuroML/: ABCD.bids-mdf.json  ABCD.bids-mdf.py  ABCD.json  ABCD.mdf.json  ABCD.mdf.yaml  ABCD.net.nml  ABCD.py  ABCD__lems.xml  FN.bids-mdf.json  FN.json  FN.mdf.json  FN.mdf.yaml  FN.net.nml  FN.py  FN_Definitions.xml  FN__lems.xml  FNrun.py  LEMS_SimABCD.xml  LEMS_SimFN.xml  PNL.xml  README.md  SimABCD.json  SimFN.json  load_FN_bids_mdf.py  regenerateAndTest.sh  run_pnl_ABCD.py  run_pnl_FN.py  test_bids_import.py
ONNX/: README.md
ONNX/convnet_onnx_example/: convnet_onnx_example.ipynb
ONNX/mdf_to_onnx/: main.py
ONNX/mdf_to_onnx/mdf_to_onnx/: __init__.py  mdf.py  mdf_to_onnx.py  onnx_tools.py
ONNX/mdf_to_onnx/tests/: ABCD.json  simple_abc.py
ONNX/onnx-mdf/: README.md  pyproject.toml  setup.cfg  setup.py
ONNX/onnx-mdf/examples/: abc-mdf.json  abc-mdf.yml  convnet-mdf.yml  convnet-onnx_mdf.json  simple_abc_mdf.py
ONNX/onnx-mdf/examples/abcd/: abcd-mdf.json  abcd-mdf.yml
ONNX/onnx-mdf/src/onnx_mdf/: mdf.py  tools.py
ONNX/onnx-mdf/src/onnx_mdf/examples/: simple_abc.py  simple_abcd.py  simple_branching_conditional.py
PsyNeuLink/: README.md  SimpleBranching-conditional.json  SimpleBranching-conditional.py  SimpleFN-conditional.json  SimpleFN.converted.py  SimpleFN.json  SimpleFN.py  SimpleLinear-conditional.json  SimpleLinear-conditional.py  model_ABCD.converted.py  model_ABCD.json  model_with_branching_graph.converted.py  model_with_branching_graph.json  model_with_branching_graph.py  model_with_simple_graph.converted.py  model_with_simple_graph.json  model_with_simple_graph.py  regenerateAndTest.sh  test_all.sh
mdf_gme/: README.md  index.js  instance_to_gme.js  mdf_meta.json  output.py  package-lock.json  package.json  webgme-setup.json
mdf_gme/config/: config.webgme.js
mdf_gme/examples/: ABCD.json  Simple.json
mdf_gme/src/common/: instance-converter.js
mdf_to_onnx/mdf_to_onnx/: mdf_tools.py  onnx_tools.py
mdf_to_pytorch/: README.md  example.py  graph_tools.py  linear_test.json  mapping.py  mdf_to_torch.py  mdf_to_torch_errors.py  mlp_pure_mdf.py  mlp_test.py  pytorch_udfs.py  text_tools.py
mdf_to_pytorch/example_mdfs/: mlp_classifier.json
mdf_to_pytorch/mdf2torch/: __init__.py  auxiliary_functions.py  graph_tools.py  mapping.py  mdf2torch.py  mdf2torch_errors.py  text_tools.py
pytorch_to_mdf/examples/: inceptionblocks_autoGME.py  inceptionblocks_pytorch.py
(+12 files in other folders)
