[metadata]
name = onnx_mdf
author = David Turner
author_email = dmturner@princeton.edu
maintainer = David Turner
maintainer_email = dmturner@princeton.edu
url = https://github.com/ModECI/MDFTests/tree/main/ONNX/onnx-mdf
description = An example parser from ONNX to MDF
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: C++
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Utilities

[options]
python_requires = >=3.6
packages = find:
package_dir =
    =src
install_requires =
    numpy >=1.13.3
    torch
    pyaml
    onnx
    neuromllite

[options.packages.find]
where = src
exclude =
    tests

[tool:pytest]
junit_family=xunit2
addopts = --benchmark-disable -Wd --strict-markers
xfail_strict = True
testpaths =
    tests
required_plugins =
    pytest-benchmark

[flake8]
max-line-length = 80
max-complexity = 13
select = C, E, F, W, B, B9, T
ignore = E203, E231, E501, E722, W503, B950
per-file-ignores =
    tests/*: T
    examples/*: T
    notebooks/*: T
    docs/*: T
    scripts/*: T
    setup.py: T
    setup_helpers.py: C901

[mypy]
warn_unused_configs = True
warn_unused_ignores = True
pretty = True
python_version = 3.5
files = src
# check_untyped_defs = True


[mypy-numpy]
ignore_missing_imports = True

[mypy-boost_histogram._core]
ignore_missing_imports = True

[mypy-boost_histogram._core.*]
ignore_missing_imports = True

[check-manifest]
ignore =
  .all-contributorsrc
  .clang-format
  .pre-commit-config.yaml
  .pre-commit-nodocker.yaml
  .readthedocs.yml
  .clang-tidy
  examples/**
  notebooks/**
  docs/**
  scripts/**
  dev-requirements.txt
  CONTRIBUTING.md
  tests/.pytest_cache/**